small changes + SQL query for adding an album to favorites fixed (was adding similar records) +replaced one exception